cleanup sonarqube